# work_cursor

./: .cursorignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROJECT_GUIDE.md  README.md  SECURITY.md  main.code-workspace  wateray-window.xml
.cursor/rules/: 00-project-baseline.mdc  05-runtime-framework.mdc  10-electron-ui.mdc  10-flutter-ui.mdc  12-electron-ui-framework.mdc  13-ui-token-conventions.mdc  20-go-core.mdc  21-singbox-latest-config.mdc  30-remove-obsolete-code.mdc  31-temp-artifacts.mdc  33-version-release-governance.mdc  README.md  代码规则.mdc  项目框架规则.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  (+1 more)
ElectronApp/: README.md  electron.vite.config.ts  package-lock.json  package.json  tsconfig.json
TauriApp/: .env.development  .env.production  .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
TauriApp/src-tauri/: 2  Cargo.toml  build.rs  tauri.conf.json
TauriApp/src-tauri/capabilities/: default.json
TauriApp/src-tauri/icons/: icon.icns
TauriApp/src-tauri/platform_contracts/: generated_build.rs
TauriApp/src-tauri/src/: app_update.rs  backend.rs  lib.rs  mobile_host.rs
TauriApp/src-tauri/src/desktop_host/: mod.rs
TauriApp/src-tauri/src/mobile_host/: mod.rs  rule_sets.rs
TauriApp/src-tauri/src/platform_contracts/: generated.rs  mod.rs
ads-server/: .env.example  README.md  package.json
app/: README.md  pubspec.yaml
core/: README.md  go.mod  go.sum
docs/: README.md
scripts/: README.md  _tmp_http_proxy.py  _tmp_subscription.txt
(+371 files in other folders)
