[package]
name = "wateray_tauri"
version = "1.5.0"
description = "Wateray desktop frontend powered by Tauri v2"
authors = ["Wateray Contributors"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
sha2 = "0.10"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tauri-plugin-log = "2"
tauri-plugin-clipboard-manager = "2"
tokio = { version = "1", features = ["time"] }

[target.'cfg(target_os = "windows")'.dependencies]
webview2-com-sys = "0.38.2"
windows = { version = "0.61", features = ["Win32_System_Com", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }
